<resources>
    <string name="app_name">ddns</string>
    <string name="select_provider">Choosing a DNS provider</string>
    <array name="dns_providers">
        <item>Cloudflare</item>
        <item>DNSPod</item>
    </array>
    <string name="saveConfig">Save Configuration</string>
    <string name="clearLog">Clear Log</string>
    <string name="startService">Start Service</string>
    <string name="ok">Ok</string>
    <string name="stopService">Stop Service</string>
    <string name="domainDesc">Primary domain name (such as example.com)</string>
    <string name="subDomainDesc">Subdomains (such as www or @)</string>
    <string name="enableIPV4">Enable IPV4</string>
    <string name="enableIPV6">Enable IPV6</string>
    <string name="enablePrivacy">Use privacy address(IPV6)</string>
    <string name="saveConfigMsg">Configuration saved</string>
    <string name="configNuLL">Configuration does not exist</string>
    <string name="startfailure">start Failure</string>
    <string name="fieldMissing">Required field is missing</string>

</resources>